# Terrain_Analysis_Tool200456

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  Main.py  README.md  environment.yml  last_coords.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: LandCover_source.tif  README.md
gdal/: README.md
notebooks/: project-definition-TEMPLATE.ipynb  results-report.ipynb
prompts/: AI_DIARY_TEMPLATE.md
results/: LandCover_matched.tif  Thalweg.dbf  Thalweg.shp  Thalweg.shx  dem_wgs84.tif  dem_wgs84_utm32n.tif  profile.csv  results_discussion.md  roughness.tif
src/terrain_pipeline/: aoi.py  dem.py  gdal_utils.py  landcover.py  profile.py  roughness.py  standar_step.py  thalweg.py
